# zig_pico_sdk

./: .gitignore  LICENSE  readme.md
src/: CMakeLists.txt  async_spi.pio  build.zig  example.h  main.zig  pico_build.zig  test.py
